--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tiko",
-  "subdomain": "tko",
+  "name": "geotiko",
+  "subdomain": "geotiko",
   "version": "0.0.1",
   "scripts": {
     "start": "node server.js"
@@ -9,7 +9,7 @@
   "description": "Plot and gather geo location information via a simple web interface, Google Maps and Node.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/icodejs/tiko"
+    "url": "https://github.com/icodejs/geotiko"
   },
   "keywords": ["geo location", "google maps api"],
   "dependencies": {
